<resources>
    <string name="app_name">Pixel Boom</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upscale">upscale</string>
    <string name="select_an_image_from_the_album">select an image from the album</string>
    <string name="display_the_image">display the image</string>
    <string name="colorize">colorize</string>
    <string name="button">Button</string>
    <string name="save">save</string>
    <string name="save_to_album" />
</resources>