<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/status_bar"
            app:title="Pixel Boom"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="@color/button_font" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="370dp"
            android:layout_height="370dp"
            android:layout_marginBottom="300dp"
            android:adjustViewBounds="true"
            android:background="@color/disabled"
            android:contentDescription="@string/display_the_image"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnUpscale"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:text="@string/upscale"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/button_font"
            app:layout_constraintBottom_toTopOf="@+id/btnColorize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnColorize"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/colorize"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/button_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="230dp"
        android:contentDescription="@string/select_an_image_from_the_album"
        app:backgroundTint="@color/black_yellow"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        app:tint="@color/white_yellow"
        tools:ignore="ImageContrastCheck,RtlHardcoded,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="230dp"
        android:contentDescription="@string/save_to_album"
        app:backgroundTint="@color/black_yellow"
        app:srcCompat="@android:drawable/ic_menu_save"
        app:tint="@color/white_yellow"
        tools:ignore="ImageContrastCheck,RtlHardcoded,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>